Added third line

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <p>It was a dark and stormy night...</p>
-	<p>But then they turned on a switch</p>
+    <p>But then they turned on a switch</p>
+    <p>But the power went out</p>
   </body>
 </html>
