--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <p>It was a dark and stormy night...</p>
     <p>But then they turned on a switch</p>
     <p>But the power went out</p>
+	<p>Luckily Ron Swanson fashioned a small generator out of someone's braces and an antique axe</p>
   </body>
 </html>
