added the css and other stuff

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+   <link rel="stylesheet" type="text/css" href="style.css"/>
+   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Satisfy"/>
+     
+   
   <body>
     <p>It was a dark and stormy night...</p>
     <p>But then they turned on a switch</p>
